--- a/meetingPlanner/meetings/templates/meetings/rooms.html
+++ b/meetingPlanner/meetings/templates/meetings/rooms.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{meeting.title}}</title>
+    <title>ROOMS</title>
+
 </head>
 <body >
     <div style="text-align: center;">
-        <h1>Meeting {{meeting.title}}</h1>
-        <br> <br> <br> <br>
-        this meeting has been scheduled on <em>{{meeting.date}}</em> at <em>{{meeting.time}}</em>
-        in <em>{{meeting.room}}</em>
+        <h1>All Available Rooms</h1>
     </div>
+    <hr>
+    <ul>
+        {% for room in rooms %}
+            <li>{{room}}</li>
+        {% endfor %}
+    </ul>
     Go To: <a href="{% url 'home' %}">Home</a>
 
 </body>
