--- a/meetingPlanner/websites/templates/websites/welcome.html
+++ b/meetingPlanner/websites/templates/websites/welcome.html
@@ -15,6 +15,21 @@
         </p>
         <p>They are currently {{meeting_nbr}} scheduled</p>
     </div>
-
+    <hr>
+    <br><br><br>
+    <div>
+        <h1>List Of Meetings</h1>
+        <ul>
+            {% for meeting in meetings %}
+                <li>
+                    <a href="{% url 'meeting' meeting.id %}">
+                        {{meeting.title}}
+                    </a>
+                </li>
+                <br>
+            {%endfor%}
+        </ul>
+    </div>
+    <a href="{% url 'rooms' %}">List Of Rooms</a>
 </body>
 </html>
